<resources>
    <string name="app_name">Prayer mode</string>
    <string name="Off">Off</string>
    <string name="On">On</string>
    <string name="select_option">Select an option</string>
    <string name="AudioText">Listen to takbir before activating silent mode</string>
    <string name="NotificationText">Show notifications during operations</string>
    <string name="general_settings">General Settings</string>
    <string name="calculation_method">Calculation method</string>
    <string name="select_calculation_method">Select the calculation method</string>
    <string-array name="calculation_methods">
        <item>Umm Al-Qura University, Makkah</item>
        <item>Muslim World League</item>
        <item>Islamic Society of North America</item>
        <item>Egyptian General Authority of Survey</item>
        <item>University of Islamic Sciences, Karachi</item>
        <item>Gulf Region</item>
        <item>Kuwait</item>
        <item>Qatar</item>
        <item>Majlis Ugama Islam Singapura, Singapore</item>
        <item>Union Organization islamic de France</item>
        <item>Diyanet İşleri Başkanlığı, Turkey</item>
        <item>Spiritual Administration of Muslims of Russia</item>
        <item>Moonsighting Committee</item>
        <item>Dubai, UAE</item>
        <item>Jabatan Kemajuan Islam Malaysia (JAKIM)</item>
        <item>Tunisia</item>
        <item>Algeria</item>
        <item>Kementerian Agama Republik Indonesia</item>
        <item>Morocco</item>
        <item>Comunidate Islamica de Lisboa, Portugal</item>
        <item>Ministry of Awqaf Islamic Affairs and Holy Places, Jordan</item>
        <item>Institute of Geophysics, University of Tehran</item>
        <item>Shia Ithna-Ashari, Leva Institute, Qum</item>
    </string-array>
    <string name="silent_mode_type">Silent mode type</string>
    <string name="select_silent_mode_type">Select silent mode type</string>
    <string-array name="silent_mode_types">
        <item>Silent (no vibration)</item>
        <item>Silent with vibration</item>
    </string-array>
    <string name="daily_silent_duration_after_adhan">Daily silent duration after adhan</string>
    <string name="daily_silent_duration">Daily silent duration</string>
    <string name="select_silent_duration">Select the daily duration</string>
    <string-array name="silent_durations">
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>35 minutes</item>
        <item>40 minutes</item>
        <item>45 minutes</item>
    </string-array>
    <string name="fajr_prayer_settings">Fajr Prayer Settings</string>
    <string name="sunrise_settings">Sunrise Settings</string>
    <string name="dhuhr_prayer_settings">Dhuhr Prayer Settings</string>
    <string name="asr_prayer_settings">Asr Prayer Settings</string>
    <string name="maghrib_prayer_settings">Maghrib Prayer Settings</string>
    <string name="isha_prayer_settings">Isha Prayer Settings</string>
    <string name="before_prayer_duration">Silent duration before adhan</string>
    <string name="after_prayer_duration">Silent duration after adhan</string>
    <string name="select_before_prayer_duration">Select before adhan duration</string>
    <string name="select_after_prayer_duration">Select after adhan duration</string>
    <string-array name="before_prayer_durations">
        <item>Off</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="after_prayer_durations">
        <item>Off</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>35 minutes</item>
        <item>40 minutes</item>
        <item>45 minutes</item>
    </string-array>
    <string name="joumoua">Al-Jumua</string>
    <string name="before_dhuhr">Silent duration before adhan</string>
    <string name="duration_before_dhuhr">Duration before adhan</string>
    <string name="select_before_dhuhr_duration">Select before adhan duration</string>
    <string-array name="before_dhuhr_duration">
        <item>Off</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>35 minutes</item>
        <item>40 minutes</item>
        <item>45 minutes</item>
        <item>50 minutes</item>
        <item>55 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string name="after_dhuhr">Silent duration after adhan</string>
    <string name="duration_after_dhuhr">Duration after adhan</string>
    <string name="select_after_dhuhr_duration">Select after adhan duration</string>
    <string-array name="after_dhuhr_duration">
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>35 minutes</item>
        <item>40 minutes</item>
        <item>45 minutes</item>
        <item>50 minutes</item>
        <item>55 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string name="ramadan">Ramadan</string>
    <string name="tarawih_silent_duration">Isha and Taraweeh silent duration</string>
    <string-array name="tarawih_duration">
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>50 minutes</item>
        <item>1 hour</item>
        <item>1 hour 30 minutes</item>
        <item>2 hours</item>
        <item>2 hours 30 minutes</item>
        <item>3 hours</item>
    </string-array>
    <string name="select_tarawih_duration">Select Isha and Taraweeh duration</string>
    <string name="tahajjud_silent_duration">Tahajjud silent duration</string>
    <string-array name="tahajjud_duration">
        <item>Off</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>1 hour 30 minutes</item>
        <item>2 hours</item>
        <item>2 hours 30 minutes</item>
        <item>3 hours</item>
    </string-array>
    <string name="select_tahajjud_duration">Select Tahajjud duration</string>
    <string name="eid_alfitr_and_eid_aladha">Eid Al Fitr - Eid Al Adha</string>
    <string name="eid_time_prayer">Eid prayer time</string>
    <string-array name="eid_time">
        <item>20 minutes after sunrise</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>10:00</item>
    </string-array>
    <string name="select_eid_time">Select Eid prayer time</string>
    <string name="eid_silent_duration">Eid silent duration</string>
    <string-array name="eid_duration">
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>50 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string name="select_eid_duration">Select Eid prayer duration</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_notice">Privacy Notice</string>
    <string name="privacy_content">"Prayer mode Privacy Notice"</string>
    <string name="privacy_policy_link_text">this link</string>
    <string name="privacy_description"><![CDATA[
This app uses your device\'s location to calculate accurate prayer times relevant to your geographical area.<br/><br/>
To ensure continuous prayer time updates and automatically activate Do Not Disturb mode at the correct times, the app requires background location access (even when the app is closed or not in use).<br/><br/>

We want to assure you that we do not:<br/>
<ul>
  <li>Collect your precise or approximate location data persistently.</li>
  <li>Store your location data on our servers.</li>
  <li>Share your location data with any third parties.</li>
  <li>Collect any other personal information.</li>
</ul>

<b>What We Store Locally (On Your Device):</b><br/><br/>
To ensure continuous and accurate prayer time updates, the app stores only your <b>last known location (latitude and longitude) locally on your device</b>.This is necessary for the core functionality of the app to work as designed, this data is used <b>solely for the purpose of detecting location changes</b>. This location data is overwritten whenever your device\'s location changes, no history of location data is maintained on your device and no data is sent to our servers or shared externally.<br/><br/>
The app will request permission to access your device\'s location. You can choose to grant or deny this permission. If you deny background location permission, the app will not be able to provide continuously updated prayer times or automatically manage Do Not Disturb mode.<br/><br/>

<b>Do Not Disturb mode</b><br/><br/>
This app may also request permission to activate Do Not Disturb (DND) mode on your device. This permission is necessary for the app to function properly by temporarily enabling DND mode to minimize interruptions during prayer times.<br/><br/>
While this permission allows the app to control your device\'s sound and vibration settings, we want to explicitly clarify that the app does NOT access, read, or collect any of your notifications, messages, call content, or any other personal data displayed by your notifications. This permission is solely for the purpose of toggling the DND mode on and off.<br/><br/>
You acknowledge that while DND mode is active, <b>you may not receive standard notifications, including emergency calls</b>. Our company shall not be held responsible for any consequences resulting from missed notifications and emergency calls, during periods when the app has activated DND mode.<br/><br/>
It is your responsibility to configure DND settings and exceptions according to your needs.<br/><br/>
We are committed to protecting your privacy. If you have any questions or concerns regarding our privacy practices, please contact us at <a href="mailto:prayer.mode@outlook.com">prayer.mode@outlook.com</a><br/><br/>

For full details of our Privacy Policy, please follow [PRIVACY_LINK].<br/><br/>

Thank you for trusting our application.<br/><br/>
]]></string>
    <string name="terms">Terms of Service</string>
    <string name="permission">Permissions</string>
    <string name="permissions_content">Required permissions</string>
    <string name="location_permission">Location permission icon</string>
    <string name="location">Location</string>
    <string name="location_description">Used to access your device\'s location to fetch precise prayer times and ensure automatic updates, even when the app is not actively open.</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Used to provide information about reminders and alerts and other important information, ensuring you receive them timely.</string>
    <string name="dnd">Do Not Disturb Mode</string>
    <string name="welcome_title">Welcome to Prayer mode</string>
    <string name="welcome_message">
    This app is designed to help you focus on what matters most—your Salah—\n\n
    Here\'s how it helps:\n\n
    \u2022 Automatically silences phone distractions during every prayer time.\n
    \u2022 Encourages you to build consistency and pray on time.\n
    \u2022 Avoids distracting those praying around you.\n\n
    Don\'t let calls and notifications stop you from connecting with Allah.\n
    </string>
    <string name="next">Next</string>
</resources>